--- a/client/src/App.css
+++ b/client/src/App.css
@@ -79,9 +79,13 @@ select {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  min-height: 1750px;
+  /* min-height: 1615px; */
   width: 100%;
   margin: 0 auto;
+}
+
+#site-content{
+  height: 100%;
 }
 
 .alert {
@@ -91,12 +95,12 @@ select {
 
 @media only screen and (max-width: 820px) {
   .body-container {
-    min-height: 2320px;
+    min-height: 1615px;
   }
 }
 
 @media only screen and (max-width: 380px){
   .body-container{
-    min-height: 3000px;
+    min-height: 1342px;
   }
 }
