--- a/client/src/components/ChatPopUp/ChatPopUp.css
+++ b/client/src/components/ChatPopUp/ChatPopUp.css
@@ -1,9 +1,9 @@
 .chat-container {
   padding: 12px;
   position: absolute;
-  bottom: 25px;
-  right: 25px;
-  background: transparent;
+  bottom: 0;
+  right: 8px;
+  background: white;
   border: none;
   font-size: 1.5rem;
   color: #31c48d;
@@ -15,7 +15,7 @@
 
 .chat-window {
   position: fixed;
-  bottom: 95px;
+  bottom: 156px;
   right: 25px;
   width: 350px;
   height: 450px;
@@ -74,7 +74,8 @@
     font-size: 3.5rem;
     width: 120px;
     height: 120px;
-    bottom: -960px;
+    bottom: -285px;
+    right: 22px;
   }
 
   .chat-window {
@@ -82,24 +83,24 @@
     bottom: 155px;
     width: 94%;
     height: 750px;
-    bottom: -820px;
+    bottom: -134px;
   }
 
-  .chat-window-content{
+  .chat-window-content {
     height: 95%;
   }
 }
 
 @media only screen and (max-width: 380px) {
   .chat-container {
-    bottom: -1800px;
+    bottom: -620px;
   }
 
   .chat-window {
-    bottom: -1650px;
+    bottom: -488px;
     right: 11px;
   }
-  .chat-window-content{
+  .chat-window-content {
     height: 97%;
   }
 }
