--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -79,6 +79,7 @@
 @media only screen and (max-width: 380px) {
   .home-container {
     text-align: center;
+    min-height: 2770px;
   }
 
   .home-section {
