--- a/client/src/components/onOffer/OnOffer.css
+++ b/client/src/components/onOffer/OnOffer.css
@@ -37,6 +37,7 @@
     width: 100%;
     height: 85vh;
     margin-top: 3rem;
+    margin-bottom: 3rem;
     min-height: 550px;
   }
   .offer-section-container {
