--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -105,6 +105,7 @@
   }
 
   .nav ul.deactive {
+    display: none;
     left: 390px;
   }
 
@@ -138,10 +139,13 @@
     z-index: 3;
   }
 
+
   .nav ul.deactive {
     left: 170px;
+    display: none;
   }
 
+  
   .burger-menu {
     display: flex;
     font-size: 2.5rem;
